--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,23 @@
 
 //elements
 @import "./elements/boutons";
+@import '.foundations/variables';
+
+
+@import '.elements/boutons';
+
+
+
+
+
+
+
+
 
 
 *
 {
     box-sizing:border-box;
 }
+
+
