--- a/scss/elements/boutons.scss
+++ b/scss/elements/boutons.scss
@@ -2,3 +2,13 @@ button
 {
     border:2px solid #01e6b6;
 }
+
+button {
+
+    width: 19px;
+    height: 19px;
+    color: $mainColor;
+    border: 1px solid $mainColor;
+}
+
+
