--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,8 @@
 //foundations
-@import "./foundations/variables";
+@import './foundations/variables';
 
 //elements
-@import "./elements/boutons";
-@import '.foundations/variables';
-
-
-@import '.elements/boutons';
+@import './elements/boutons.scss';
 
 
 
@@ -17,9 +13,5 @@
 
 
 
-*
-{
-    box-sizing:border-box;
-}
 
 
