--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
 * {
   box-sizing: border-box;
+button {
+  width: 19px;
+  height: 19px;
+  color: #01E6B6;
+  border: 1px solid #01E6B6;
+}
+
+.textBody {
+  color: #C5C5C5;
+  font-size: 14px;
 }/*# sourceMappingURL=main.css.map */
