--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,8 @@
 @import './foundations/variables';
 
 //elements
-@import './elements/boutons.scss';
+@import './elements/boutons';
+
 @import './elements/form';
 
 
