--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
-* {
-  box-sizing: border-box;
+button {
+  width: 19px;
+  height: 19px;
+  color: #01E6B6;
+  border: 1px solid #01E6B6;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form__label {
+  color: #C5C5C5;
+}
+.form__input {
+  border: 2px solid #01E6B6;
+  width: 250px;
+}
+.form__input:focus {
+  border: 2px solid #C5C5C5;
 }/*# sourceMappingURL=main.css.map */
