--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 //foundations
 @import './foundations/variables';
+@import "./foundations/mixins";
 
 //elements
 @import './elements/boutons.scss';
