--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-* {
-  box-sizing: border-box;
 button {
   width: 19px;
   height: 19px;
@@ -7,7 +5,38 @@ button {
   border: 1px solid #01E6B6;
 }
 
+@font-face {
+  font-family: supreme;
+  src: url("../../fonts/SUPREME-REGULAR.OTF");
+}
+@font-face {
+  font-family: deserta;
+  src: url("../../fonts/DESERTA.OTF");
+}
+@font-face {
+  font-family: anurati;
+  src: url("../../fonts/ANURATI-REGULAR.OTF");
+}
 .textBody {
   color: #C5C5C5;
   font-size: 14px;
+  font-family: supreme;
+}
+
+.labelForm {
+  color: #C5C5C5;
+  font-size: 12;
+  font-family: supreme;
+}
+
+.title {
+  color: white;
+  font-size: 25px;
+  font-family: deserta;
+}
+.title.-big {
+  font-size: 35px;
+}
+.title.-little {
+  font-size: 20px;
 }/*# sourceMappingURL=main.css.map */
