--- a/scss/foundations/_variables.scss
+++ b/scss/foundations/_variables.scss
@@ -3,6 +3,10 @@ $mainColor : #01E6B6;
 $bodyText : #C5C5C5;
 $redColor: #FF6262;
 
+//Fonts
+$textFontFamily : supreme ;
+$titleFontFamily : deserta;
+$logoFontFamily : anurati;
 
 
 
