--- a/scss/elements/_text.scss
+++ b/scss/elements/_text.scss
@@ -13,7 +13,7 @@
 
 .textBody{
     color : $bodyText;
-    font-size: 14px;
+    font-size: pxToRem(14);
     font-family: $textFontFamily;
 }
 
@@ -26,9 +26,9 @@
 .title{
     @include title();
     &.-big{
-        font-size: 35px;
+        font-size: pxToRem(35);
     }
     &.-little{
-        font-size : 20px;
+        font-size : pxTorem(20);
     }
 }
