--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,29 @@
-
-* {
-  box-sizing: border-box;
-
 button {
   width: 19px;
   height: 19px;
   color: #01E6B6;
   border: 1px solid #01E6B6;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form__label {
+  color: #C5C5C5;
+  margin: 5px 0;
+}
+.form__input {
+  border: 2px solid #01E6B6;
+  width: 250px;
+  height: 25px;
+  outline: none;
+}
+.form__input:focus {
+  border-color: #C5C5C5;
+}
+.form__input.-error {
+  border-color: #FF6262;
 }
 
 @font-face {
@@ -29,7 +46,7 @@ button {
 
 .labelForm {
   color: #C5C5C5;
-  font-size: 12;
+  font-size: 12px;
   font-family: supreme;
 }
 
@@ -43,24 +60,4 @@ button {
 }
 .title.-little {
   font-size: 20px;
-
-.form {
-  display: flex;
-  flex-direction: column;
-}
-.form__label {
-  color: #C5C5C5;
-}
-.form__input {
-  border: 2px solid #01E6B6;
-  width: 250px;
-}
-.form__input:focus {
-  border: 2px solid #C5C5C5;
-
-.textBody {
-  color: #C5C5C5;
-  font-size: 14px;
-
-
 }/*# sourceMappingURL=main.css.map */
