--- a/scss/elements/_form.scss
+++ b/scss/elements/_form.scss
@@ -3,12 +3,18 @@
     flex-direction: column;
     &__label{
         color: $bodyText;
+        margin: 5px 0;
     }
     &__input{
         border: 2px solid $mainColor;
         width: 250px;
+        height: 25px;
+        outline: none;
         &:focus{
-            border: 2px solid $bodyText;
+            border-color: $bodyText;
+        }
+        &.-error{
+            border-color: $redColor;
         }
     }
 }
