--- a/scss/elements/_text.scss
+++ b/scss/elements/_text.scss
@@ -19,8 +19,8 @@
 
 .labelForm{
     color: $bodyText;
-    font-size: 12;
-    font-family: $textFontFamily;l
+    font-size: 12px;
+    font-family: $textFontFamily;
 }
 
 .title{
