--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 //foundations
 @import './foundations/variables';
 @import "./foundations/mixins";
+@import "./foundations/functions";
+
 
 //elements
 @import './elements/boutons.scss';
