--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,23 @@
-
-* {
-  box-sizing: border-box;
-
 button {
   width: 19px;
   height: 19px;
   color: #01E6B6;
   border: 1px solid #01E6B6;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form__label {
+  color: #C5C5C5;
+}
+.form__input {
+  border: 2px solid #01E6B6;
+  width: 250px;
+}
+.form__input:focus {
+  border: 2px solid #C5C5C5;
 }
 
 @font-face {
@@ -23,44 +34,23 @@ button {
 }
 .textBody {
   color: #C5C5C5;
-  font-size: 14px;
+  font-size: 1rem;
   font-family: supreme;
 }
 
 .labelForm {
   color: #C5C5C5;
-  font-size: 12;
+  font-size: pxTorem(12);
   font-family: supreme;
 }
 
 .title {
   color: white;
-  font-size: 25px;
   font-family: deserta;
 }
 .title.-big {
-  font-size: 35px;
+  font-size: pxTorem(35);
 }
 .title.-little {
-  font-size: 20px;
-
-.form {
-  display: flex;
-  flex-direction: column;
-}
-.form__label {
-  color: #C5C5C5;
-}
-.form__input {
-  border: 2px solid #01E6B6;
-  width: 250px;
-}
-.form__input:focus {
-  border: 2px solid #C5C5C5;
-
-.textBody {
-  color: #C5C5C5;
-  font-size: 14px;
-
-
+  font-size: pxTorem(20);
 }/*# sourceMappingURL=main.css.map */
