--- a/scss/foundations/_mixins.scss
+++ b/scss/foundations/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin title {
     color : white;
     font-family: $titleFontFamily;
-    font-size: font-size : pxTorem(25);
+    font-size: pxTorem(25);
 }
