--- a/css/main.css
+++ b/css/main.css
@@ -47,10 +47,16 @@ button {
 .title {
   color: white;
   font-family: deserta;
+  font-size: pxTorem(25);
 }
 .title.-big {
   font-size: pxTorem(35);
 }
 .title.-little {
   font-size: pxTorem(20);
+}
+
+* {
+  box-sizing: border-box;
+  background-color: #2b2b2b;
 }/*# sourceMappingURL=main.css.map */
