--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,10 @@
 @import './elements/form';
 @import './elements/text';
 
+*{
+    box-sizing: border-box;
+    background-color: $backgroundColor
+}
 
 
 
