--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,13 @@ button {
 
 .menu__list {
   list-style: none;
+  display: flex;
+  align-items: center;
 }
-.menu__list .menu__icone {
+.menu__list .menu__item {
+  margin: 0px 1.0714285714rem;
+}
+.menu__list .menu__item .menu__icone {
   width: 2.5rem;
 }
 
