--- a/scss/elements/_icones.scss
+++ b/scss/elements/_icones.scss
@@ -1,9 +1,16 @@
 .menu__list
 {
     list-style: none;
-    
-    .menu__icone
+    display:flex;
+    align-items: center;
+
+    .menu__item
     {
-        width:pxToRem(35);
+        margin:0px pxToRem(15);
+
+        .menu__icone
+        {
+            width:pxToRem(35);
+        }
     }
 }
