--- a/scss/elements/_boutons.scss
+++ b/scss/elements/_boutons.scss
@@ -7,4 +7,16 @@ button {
 
 }
 
-
+.check{
+    input[type="checkbox"] {
+        display: none;
+    }
+    label {
+        border: 2px solid $bodyText;
+        cursor: pointer;
+        height: 20px;
+        width: 20px;
+        position: absolute;
+        display: flex;
+    }
+}
