--- a/scss/elements/_boutons.scss
+++ b/scss/elements/_boutons.scss
@@ -4,6 +4,15 @@ button {
     color: $mainColor;
     border: 1px solid $mainColor;
 
+    &.-bouton
+    {
+        border: 1px solid red;
+    }
+
+    &.-checkBox
+    {
+        border: 1px solid yellow;
+    }
 }
 
 .check{
