--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,8 @@
 
 
 //elements
-@import './elements/boutons.scss';
-@import './elements/icones.scss';
+@import './elements/boutons';
+@import './elements/icones';
 @import './elements/form';
 @import './elements/text';
 
