--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,13 @@ button {
 .check input[type=checkbox] {
   display: none;
 }
+.check input[type=checkbox]:checked + label {
+  background-color: #01E6B6;
+  border-color: #01E6B6;
+}
+.check input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
 .check label {
   border: 2px solid #C5C5C5;
   cursor: pointer;
@@ -15,6 +22,19 @@ button {
   width: 20px;
   position: absolute;
   display: flex;
+}
+.check label:after {
+  border: 2px solid #2b2b2b;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  opacity: 0;
+  position: absolute;
+  top: 2px;
+  left: 1px;
+  transform: rotate(-45deg);
+  width: 12px;
 }
 
 .menu__list {
