--- a/scss/elements/_boutons.scss
+++ b/scss/elements/_boutons.scss
@@ -1,4 +1,3 @@
-
 button {
     width: 19px;
     height: 19px;
@@ -10,7 +9,15 @@ button {
 .check{
     input[type="checkbox"] {
         display: none;
+        &:checked + label {
+            background-color: $mainColor;
+            border-color: $mainColor;
+        }
+        &:checked + label:after {
+            opacity: 1;
+        }
     }
+   
     label {
         border: 2px solid $bodyText;
         cursor: pointer;
@@ -18,5 +25,20 @@ button {
         width: 20px;
         position: absolute;
         display: flex;
+        
+        &:after {
+            border: 2px solid $backgroundColor;
+            border-top: none;
+            border-right: none;
+            content: "";
+            height: 6px;
+            opacity: 0;
+            position: absolute;
+            top: 2px;
+            left: 1px;
+            transform: rotate(-45deg);
+            width: 12px;
+        }
     }
 }
+
