rectification chemins icones

--- a/scss/elements/_boutons.scss
+++ b/scss/elements/_boutons.scss
@@ -3,16 +3,11 @@ button {
     height: 19px;
     color: $mainColor;
     border: 1px solid $mainColor;
+}
 
-    &.-bouton
-    {
-        border: 1px solid red;
-    }
-
-    &.-checkBox
-    {
-        border: 1px solid yellow;
-    }
+.bouton
+{
+    width:200px;
 }
 
 .check{
@@ -50,70 +45,6 @@ button {
         }
     }
 }
-
-button.quantité {
-    width: 20px;
-    height: 20px;
-    background: transparent;
-    color: $mainColor;
-    border: 1px solid $mainColor;
-
-&:hover{
-    background: $mainColor;
-    color: #2B2B2B;
-    border: none;
-}
-}
-
-.colorCheck{
-    input[type="checkbox"]{
-        display: none;
-
-        &:checked+label{
-            background-color: transparent;
-        }
-       
-        &:checked + label:before{
-        opacity: 1;
-        }
-        &:checked + label:after{
-            opacity: 1;
-        }
-    }
-
-    label{
-        background-color: $bodyText;
-        cursor: pointer;
-        height: 20px;
-        width: 20px;
-        position: absolute;
-        display: flex;
-        &:before{
-            height: 15px;
-            width: 15px;
-            opacity: 0;
-            content: "";
-            position: absolute;
-            top: 4.5px;
-            left: 4.5px;
-            background-color: $bodyText;
-        }
-        &:after{
-            border: 2px solid $mainColor;
-            width: 20px;
-            height: 20px;
-            position: absolute;
-            content: "";
-            opacity: 0;
-            border-style: dashed;
-        }    
-
-    }
-}
-
-
-
-
 
 
 
