--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,12 @@
-.button {
+button {
   width: 19px;
   height: 19px;
   color: #01E6B6;
   border: 1px solid #01E6B6;
 }
-.button.-bouton {
-  border: 1px solid red;
-}
-.button.-checkBox {
-  border: 1px solid yellow;
+
+.bouton {
+  width: 200px;
 }
 
 .check input[type=checkbox] {
