--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,34 @@ button {
 
 .bouton {
   width: auto;
-  padding: 0.8571428571rem 1.1428571429rem;
+  padding: 0.3571428571rem 2.1428571429rem;
 }
 .bouton:hover {
   color: white;
+}
+.bouton.-suivant::after {
+  border-style: solid;
+  border-width: 0.12em 0.12em 0 0;
+  content: "";
+  display: inline-block;
+  height: 0.4285714286rem;
+  left: 0.2142857143rem;
+  position: relative;
+  transform: rotate(45deg);
+  vertical-align: center;
+  width: 0.4285714286rem;
+}
+.bouton.-precedent::before {
+  border-style: solid;
+  border-width: 0.12em 0.12em 0 0;
+  content: "";
+  display: inline-block;
+  height: 0.4285714286rem;
+  right: 0.2142857143rem;
+  position: relative;
+  transform: rotate(-135deg);
+  vertical-align: center;
+  width: 0.4285714286rem;
 }
 
 .check input[type=checkbox] {
