optimisation css icones & redimensionnement
Clarification du code icone.scss et rapetissement des icones

--- a/scss/elements/_icones.scss
+++ b/scss/elements/_icones.scss
@@ -1,16 +1,20 @@
-.menu__list
+.menu
 {
-    list-style: none;
-    display:flex;
-    align-items: center;
+    &__list
+    {
+        list-style: none;
+        display:flex;
+        align-items: center;
+    }
 
-    .menu__item
+    &__item
     {
         margin:0px pxToRem(15);
+    }
 
-        .menu__icone
-        {
-            width:pxToRem(35);
-        }
+    &__icone
+    {
+        height:pxToRem(20);
     }
 }
+
