Revert "optimisation css icones & redimensionnement"
This reverts commit f8d2feaf6a016dc573229d22f6762d258e363d39.

--- a/css/main.css
+++ b/css/main.css
@@ -72,11 +72,11 @@ button {
   display: flex;
   align-items: center;
 }
-.menu__item {
+.menu__list .menu__item {
   margin: 0px 1.0714285714rem;
 }
-.menu__icone {
-  height: 1.4285714286rem;
+.menu__list .menu__item .menu__icone {
+  width: 2.5rem;
 }
 
 .form {
