Ajout du menu - pas fini

--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,27 @@ button {
 .title.-little {
   font-size: pxTorem(20);
 }
+.title.-menu {
+  font-style: pxTorem(16);
+}
+
+.header {
+  height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 18px;
+}
+.header__row {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-between;
+}
 
 * {
   box-sizing: border-box;
   background-color: #2b2b2b;
+  margin: 0;
+  padding: 0;
 }/*# sourceMappingURL=main.css.map */
