--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,16 +3,20 @@
 @import "./foundations/mixins";
 @import "./foundations/functions";
 
-
 //elements
 @import './elements/boutons.scss';
 @import './elements/icones.scss';
 @import './elements/form';
 @import './elements/text';
 
+//components
+@import './components/menu';
+
 *{
     box-sizing: border-box;
-    background-color: $backgroundColor
+    background-color: $backgroundColor;
+    margin: 0;
+    padding: 0;
 }
 
 
