--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 button {
   width: 19px;
   height: 19px;
@@ -35,6 +36,59 @@ button {
   left: 1px;
   transform: rotate(-45deg);
   width: 12px;
+}
+
+button.quantité {
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  color: #01E6B6;
+  border: 1px solid #01E6B6;
+}
+button.quantité:hover {
+  background: #01E6B6;
+  color: #2B2B2B;
+  border: none;
+}
+
+.colorCheck input[type=checkbox] {
+  display: none;
+}
+.colorCheck input[type=checkbox]:checked + label {
+  background-color: transparent;
+}
+.colorCheck input[type=checkbox]:checked + label:before {
+  opacity: 1;
+}
+.colorCheck input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
+.colorCheck label {
+  background-color: #C5C5C5;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  display: flex;
+}
+.colorCheck label:before {
+  height: 15px;
+  width: 15px;
+  opacity: 0;
+  content: "";
+  position: absolute;
+  top: 4.5px;
+  left: 4.5px;
+  background-color: #C5C5C5;
+}
+.colorCheck label:after {
+  border: 2px solid #01E6B6;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  content: "";
+  opacity: 0;
+  border-style: dashed;
 }
 
 .menu__list {
