--- a/scss/elements/_text.scss
+++ b/scss/elements/_text.scss
@@ -34,5 +34,9 @@
     }
     &.-menu{
         font-style: pxTorem(16);
+        padding : 30px;
+    }
+    &.-icone{
+        padding : 30px 15px;
     }
 }
