--- a/css/main.css
+++ b/css/main.css
@@ -107,10 +107,16 @@ button {
 }
 .title.-menu {
   font-style: pxTorem(16);
-  padding: 30px;
+  text-transform: uppercase;
+  padding-right: 22px;
 }
 .title.-icone {
-  padding: 30px 15px;
+  padding-right: 20px;
+}
+
+.liens:hover {
+  color: #01E6B6;
+  text-decoration: underline;
 }
 
 .header {
@@ -125,6 +131,7 @@ button {
   flex-direction: row;
   list-style: none;
   justify-content: space-between;
+  align-items: center;
 }
 
 * {
@@ -132,4 +139,9 @@ button {
   background-color: #2b2b2b;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }/*# sourceMappingURL=main.css.map */
