--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -9,6 +9,7 @@
         flex-direction: row;
         list-style: none;
         justify-content: space-between;
+        align-items: center;
     }
 }
 
