--- a/src/scss/foundations/_mixins.scss
+++ b/src/scss/foundations/_mixins.scss
@@ -2,3 +2,15 @@
     color : white;
     font-family: $titleFontFamily;
 }
+
+@mixin button {
+    border-style: solid;
+    border-width: 0.12em 0.12em 0 0;
+    content: "";
+    display: inline-block;
+    height: pxToRem(6);
+    right: pxToRem(3);
+    position: relative;
+    vertical-align: center;
+    width: pxToRem(6);
+}
