--- a/src/scss/foundations/normalize.scss
+++ b/src/scss/foundations/normalize.scss
@@ -13,14 +13,16 @@ a{
     color: inherit;
 }
 
-.grid{
-    margin: 0 80px;
-}
-
 p{
     @include bodyText();
 }
 
 h1, h2, h3{
     @include title();
+}
+
+blockquote>p{
+    font-style: italic;
+    font-size: 1.5rem;
+    line-height: 30px;
 }
