--- a/src/scss/foundations/normalize.scss
+++ b/src/scss/foundations/normalize.scss
@@ -23,6 +23,13 @@ h1, h2, h3{
     @include title();
 }
 
+h4{
+    font-family: $titleFontFamily;
+    font-weight : 400;
+    text-transform: none;
+    color : $mainColor;
+  }
+
 blockquote>p{
     font-style: italic;
     font-size: 1.5rem;
