--- a/src/scss/foundations/normalize.scss
+++ b/src/scss/foundations/normalize.scss
@@ -23,11 +23,17 @@ h1, h2, h3{
     @include title();
 }
 
-h4{
-    font-family: $titleFontFamily;
-    font-weight : 400;
+.aProposText{
+    font-family: $textFontFamily;
+    font-weight : 700;
     text-transform: none;
     color : $mainColor;
+    font-size: 20px;
+  }
+
+.aProposBlock{
+    width: 40%;
+    
   }
 
 blockquote>p{
