--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,10 +1,45 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+}
+
+body {
   padding: 0;
+  background-color: #2b2b2b;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+p {
+  color: #C5C5C5;
+  font-family: supreme;
+  font-size: 16px;
+}
+
+h1, h2, h3 {
+  color: white;
+  font-family: deserta;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.aProposText > div > p:first-child {
+  font-family: supreme;
+  font-weight: 700;
+  text-transform: none;
+  color: #01E6B6;
+  font-size: 20px;
+  margin: 0;
+}
+
+.aProposBlock {
+  width: 40%;
+}
+
+blockquote > p {
+  font-style: italic;
+  font-size: 1.5rem;
+  line-height: 30px;
 }/*# sourceMappingURL=normalize.css.map */
